--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,13 +7,13 @@
         android:title="Home" />
 
     <item
-        android:id="@+id/ic_favorite"
-        android:icon="@drawable/ic_favorite"
-        android:title="Favorite" />
+        android:id="@+id/ic_person"
+        android:icon="@drawable/ic_person"
+        android:title="Account" />
 
     <item
-        android:id="@+id/ic_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings" />
+        android:id="@+id/ic_whatshot"
+        android:icon="@drawable/ic_whatshot"
+        android:title="Sertificate" />
 
 </menu>
