--- a/app/src/main/res/layout/fragment_sertificate.xml
+++ b/app/src/main/res/layout/fragment_sertificate.xml
@@ -13,7 +13,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Sertificate" />
+            android:text="Sertificate"
+            android:textColor="@color/black" />
 
     </RelativeLayout>
 
