--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/ic_whatshot"
         android:icon="@drawable/ic_whatshot"
-        android:title="Sertificate" />
+        android:title="Certificate" />
 
 </menu>
