--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_whatshot"
         android:title="Certificate" />
 
+    <item
+        android:id="@+id/ic_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings" />
+
 </menu>
