--- a/app/src/main/res/layout/setting_item_layout.xml
+++ b/app/src/main/res/layout/setting_item_layout.xml
@@ -52,19 +52,10 @@
             android:id="@+id/iv_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="340dp"
-            android:layout_marginLeft="340dp"
+            android:layout_marginStart="280dp"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="100dp"
             android:src="@mipmap/ic_launcher" />
-
-<!--        <ImageView-->
-<!--            android:id="@+id/arrow"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="340dp"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            android:layout_marginEnd="100dp"-->
-<!--            android:src="@drawable/ic_arrow_forward" />-->
 
     </RelativeLayout>
 
