--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,9 +7,9 @@
     tools:context=".activities.WelcomeActivity">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_favorite"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:src="@drawable/ic_main_img"
         android:layout_centerInParent="true"
         android:id="@+id/iv_lingo" />
 
