--- a/app/src/main/res/layout/fragment_certificate.xml
+++ b/app/src/main/res/layout/fragment_certificate.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".fragments.CertificateFragment">
+    tools:context=".fragments.CertificateFragment"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/certificate"
         android:layout_width="match_parent"
-        android:layout_height="557dp"
+        android:layout_height="430dp"
         android:layout_above="@+id/bt_save"
-        android:src="@drawable/certificate" />
+        android:src="@drawable/certificate_jpg" />
 
     <Button
         android:id="@+id/bt_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Download as Image"
-        android:textAllCaps="false"
-        android:layout_alignParentBottom="true"/>
+        android:text="Download as Imadge"
+        android:textAllCaps="false"/>
 
 
-</RelativeLayout>
+</LinearLayout>
