--- a/app/src/main/res/layout/activity_podcast.xml
+++ b/app/src/main/res/layout/activity_podcast.xml
@@ -6,11 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activities.PodcastActivity">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="359dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        tools:listitem="@layout/podcast_item_layout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
