--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".activities.PracticeActivity">
 
-    <TextView
-        android:id="@+id/textView3"
+    <Button
+        android:id="@+id/btn_go_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Practice"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="309dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="313dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
