Added List of practice exercises

--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.PracticeActivity">
 
-    <Button
-        android:id="@+id/btn_go_to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Practice"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="313dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        tools:listitem="@layout/setting_item_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
