--- a/app/src/main/res/layout/fragment_certificate.xml
+++ b/app/src/main/res/layout/fragment_certificate.xml
@@ -18,7 +18,7 @@
         android:id="@+id/bt_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Download as Imadge"
+        android:text="Download as Image"
         android:textAllCaps="false"/>
 
 
