--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
-    <item
-        android:id="@+id/ic_person"
-        android:icon="@drawable/ic_person"
-        android:title="Account" />
+<!--    <item-->
+<!--        android:id="@+id/ic_person"-->
+<!--        android:icon="@drawable/ic_person"-->
+<!--        android:title="Account" />-->
 
     <item
         android:id="@+id/ic_whatshot"
